[project]
name = "ic-mt-hardening"
version = "0.1.0"
description = "Movable Type security batch-check CLI that outputs Markdown or JSON reports."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ic-mt-hardening = "ic_mt_hardening.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
